# emonet

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CITATION.cff  DESCRIPTION.md  MANIFEST.in  README.md  anger_results.txt  env-base-plus.yml  env-base.yml  env-m1-mac.yaml  fear_results.txt  inference.py  noxfile.py  sadness_results.txt  setup.cfg
docker/base/: Dockerfile  README.md
docker/model/: Dockerfile  README.md
docs/: Makefile
docs/source/: conf.py  contents.md  emonet.data_loader.rst  emonet.data_setup.rst  emonet.get_weights.rst  emonet.log.rst  emonet.model.rst  emonet.modules.rst  emonet.train.rst  emonet.wav_splitter.rst  index.md  modules.rst
emonet/: __init__.py  batch_resample.py  batch_vad.py  data_loader.py  data_prep.py  data_setup.py  dir_setup.py  get_weights.py  log.py  m4a_to_wav.py  model.py  modules.py  plots.py  score.py  train.py  transforms.py  utils.py  wav_splitter.py
emonet/manifests/: metadata.json  test.json  test_splits.json  train.json  train_splits.json  valid.json  valid_splits.json
notebooks/: Correlation_analysis_voice_labels.ipynb  anger_weights.csv  consensus.ipynb  explore.ipynb  fear_weights.csv  manifests.ipynb  metrics.ipynb  sadness_weights.csv  spec_play.ipynb  test.ipynb  vad_play.ipynb
notebooks/figures/: spec-split-1.pxm
tests/: test_data_splits.py
