[metadata]
name = emonet
version = 0.1.0
author = Chris Santiago
email = cjsantiago@gatech.edu
license = MIT License
description = Emotion Recognition with CNN-LSTM Network
long_description = file: DESCRIPTION.md
long_description_content_type = text/markdown
url = https://github.com/chris-santiago/emonet
project_urls =
    Documentation = https://chris-santiago.github.io/emonet/

[options]
packages = find:
python_requires = >= 3.8
include_package_data = true
zip_safe = False
install_requires =
    # these are minimum requirements to install and run model(s)
    # preferred method is to install these via conda, exception speechbrain (pip)
    # commenting out, by default
;    torch
;    torchvision
;    torchaudio
;    pytorch-lightning>=1.6.4
;    torchmetrics
;    transformers
;    scipy
;    sentencepiece
;    speechbrain
;    wandb
;    ipython

[options.entry_points]
console_scripts =
    emonet = emonet.score:main

[options.packages.find]
exclude = tests

[options.extras_require]
train =
    # these are for exploration, mostly
    pandas
    matplotlib
    seaborn
    jupyterlab
    scikit-learn
    bokeh
    librosa

dev =
    sphinx
    furo
    myst-parser
    nox
    pytest
    pytest-cov
    mypy
    pylint
    flake8
    isort
    check-manifest
    pre-commit
build =
    twine
    wheel
    build

[flake8]
max-line-length = 100
exclude = tests/*, noxfile.py, docs/*
max-complexity = 10
ignore = E203, E501

[isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 100

[mypy]
python_version = 3.9
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool:pytest]
testpaths = tests/
addopts = --verbose
# removed --cov=emonet --cov-report=html

[check-manifest]
ignore =
    docs
    docs/**
    notebooks
    notebooks/**
    .pre-commit-config.yaml
    .gitignore
    .pylintrc
    Makefile
    noxfile.py
    pretrained/
    pretrained/**
    env*.yaml
    env*.yml
    environment.yml
    m1_environment.yaml
    .old/*
    *.sh
    *.pt
    from_paperspace/**
    **/wandb/**
    **/lightning_logs/**
    emonet/models/cnn_lstm/from_paperspace.py
    inference.py
    saved_models/*.ckpt
    .dockerignore
    docker/**


[pylint.master]
fail-under = 9.0
ignore-patterns = test
disable=
    # Disable these for scikit-learn style code
    invalid-name,
    attribute-defined-outside-init,

[pylint.format]
max-line-length = 100
max-module-lines = 1000

[pylint.similarities]
min-similarity-lines = 4
ignore-comments = yes
ignore-docstrings = yes
